@@ -81,6 +81,8 @@ Fixed a bug in transicc when clot tables are present
 Added formatter resolution after xform optimization plugin
 added half float variants (ABGR and so)
 Fixed a bug in XYZ floating point PCS
+Fixed an unitialized read on PatchLUT
+Added a check for maximum input channels
 
 2.4 Featured release
 --------------------
